様々な条件を用いて検索できる機能と、コースの申込状況がわかるステータスを追加しました。